--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description              : &description "Economics professor in Montpellier and 
 url                      : https://mdupaigne.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "mdupaigne.github.io"
-teaser                   : "MDprofil.jpg" # filename of teaser fallback teaser image placed in /images/, .e.g. 
+teaser                   : "500x300.png" # filename of teaser fallback teaser image placed in /images/, .e.g. 
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
 future                   : true
