--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Martial Dupaigne"
-  avatar           : "MDprofile.jpg"
+  avatar           : "MDprofile.png"
   bio              : "Economics professor in Montpellier and macroeconomics researcher in Toulouse"
   location         : "Occitanie, France"
   employer         :
