--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
   - title: "Graph of the day"
-    url: /portfolio/
+    url: /graph/
 
   - title: "Publications"
     url: /publications/
