--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
-  - title: "Graph of the day"
-    url: /graph/
+  - title: "Portfolio"
+    url: /portfolio/
 
   - title: "Publications"
     url: /publications/
@@ -9,10 +9,14 @@ main:
   - title: "Teaching"
     url: /teaching/    
     
+  - title: "Funding"
+#    url: /funding/    
 #  - title: "Talks"
 #    url: /talks/    
         
-#  - title: "Blog Posts"
+  - title: "TMW"
+    url: /TMW/
+#  - title: "TMW"
 #    url: /year-archive/
     
   - title: "CV"
