--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
     url: /teaching/    
     
   - title: "Funding"
-#    url: /funding/    
+    url: /funding/    
 #  - title: "Talks"
 #    url: /talks/    
         
