--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,8 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?hl=fr&user=9ls8LDYAAAAJ"
-  email            :
+  email            : "martial.dupaigne@tse-fr.eu"
+  email            : "martial.dupaigne@univ-montp3.fr"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
