--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ author:
   googlescholar    : "https://scholar.google.com/citations?hl=fr&user=9ls8LDYAAAAJ"
   email            : "martial.dupaigne@tse-fr.eu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
-  uri              :
+  uri              : "martial.dupaigne@univ-montp3.fr"
   bitbucket        :
   codepen          :
   dribbble         :
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
+  linkedin         : "https://www.linkedin.com/in/martial-dupaigne-26bb9822/"
   orcid            :
   pinterest        :
   soundcloud       :
