--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/martial-dupaigne-26bb9822/"
+  linkedin         : https://www.linkedin.com/in/martial-dupaigne-26bb9822/
   orcid            :
   pinterest        :
   soundcloud       :
