--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Occitanie, France"
   employer         : "martial.dupaigne@univ-montp3.fr"
   pubmed           : 
-  googlescholar    : "https://scholar.google.com/citations?hl=fr&user=9ls8LDYAAAAJ"
+  googlescholar    : "user=9ls8LDYAAAAJ"
   email            : "martial.dupaigne@tse-fr.eu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              : "martial.dupaigne@univ-montp3.fr"
