--- a/_config.yml
+++ b/_config.yml
@@ -84,9 +84,9 @@ author:
   avatar           : "MDprofile.png"
   bio              : "Economics professor in Montpellier and macroeconomics researcher in Toulouse"
   location         : "Occitanie, France"
-  employer         : "martial.dupaigne@univ-montp3.fr"
+  employer         : 
   pubmed           : 
-  googlescholar    : "user=9ls8LDYAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?hl=fr&user=9ls8LDYAAAAJ"
   email            : "martial.dupaigne@tse-fr.eu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              : "martial.dupaigne@univ-montp3.fr"
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : https://www.linkedin.com/in/martial-dupaigne-26bb9822/
+  linkedin         : "https://www.linkedin.com/in/martial-dupaigne-26bb9822/"
   orcid            :
   pinterest        :
   soundcloud       :
